--- a/templates/index.html.twig
+++ b/templates/index.html.twig
@@ -31,7 +31,7 @@
             </div>
 
             <div class="col-12 col-lg-9 " style="height: 100%">
-                <div class="overflow-y-auto bg-light border-2 rounded-2" style="height: 95%">
+                <div id="messageContainer" class="overflow-y-auto bg-light border-2 rounded-2" style="height: 95%">
                     {% include 'index/index-messages.html.twig' %}
                     {% include 'index/index-envoi-messages.html.twig' %}
                 </div>
@@ -40,5 +40,10 @@
         </div>
 
     </div>
+
+    <script>
+        const messageContainer = document.getElementById('messageContainer');
+        messageContainer.scrollTop = messageContainer.scrollHeight;
+    </script>
 
 {% endblock %}
