--- a/templates/index/index-messages.html.twig
+++ b/templates/index/index-messages.html.twig
@@ -32,7 +32,7 @@
                         <b>{{ message.user.nom }} {{ message.user.prenom }}:</b>
                     </div>
                     <div>
-                        {{ message.contenu }}
+                        {{ message.contenu|nl2br }}
                     </div>
                     <div class="text-end">
                         <i>{{ message.dateEnvoi|date('d/m/Y H:i:s') }}</i>
@@ -56,7 +56,7 @@
                         <b>{{ message.user.nom }} {{ message.user.prenom }}:</b>
                     </div>
                     <div>
-                        {{ message.contenu }}
+                        {{ message.contenu|nl2br }}
                     </div>
                     <div class="text-end">
                         <i>{{ message.dateEnvoi|date('d/m/Y H:i:s') }}</i>
