Changement longueur caractères message et nombre de lignes

--- a/templates/index/index-envoi-messages.html.twig
+++ b/templates/index/index-envoi-messages.html.twig
@@ -12,7 +12,7 @@
     {% endif %}
     <div class="fixed-bottom p-2">
         <div class="input-group">
-            <textarea name="message" class="form-control" placeholder="Message" aria-label="Message" aria-describedby="basic-addon2" required rows="2" maxlength="255" style="resize: none;" id="messageTextarea"></textarea>
+            <textarea name="message" class="form-control" placeholder="Message" aria-label="Message" aria-describedby="basic-addon2" required rows="1" style="resize: none;" id="messageTextarea"></textarea>
             <div class="input-group-append align-content-center">
                 <input class="btn btn-success bg-gradient" value="Envoyer" type="submit">
             </div>
