--- a/templates/admin.html.twig
+++ b/templates/admin.html.twig
@@ -25,7 +25,7 @@
                 <td>{{ user.nom }}</td>
                 <td>{{ user.prenom }}</td>
                 <td>{{ user.mail }}</td>
-                <td>{{ user.roles | map(role => { 'ROLE_USER': 'Utilisateur', 'ROLE_ADMIN': 'Administrateur' }[role] | default(role)) | join(', ') }}</td>
+                <td>{{ user.roles | map(role => { 'ROLE_USER': 'Utilisateur', 'ROLE_ADMIN': 'Administrateur', 'ROLE_PRIVILEGED': 'Privilégié' }[role] | default(role)) | join(', ') }}</td>
                 <td class="text-center">
                     {% if user.actif == 0 %}
                         <span class="badge bg-success fs-6">Actif</span>
